--- a/_posts/2016-04-25-ionic1-3.markdown
+++ b/_posts/2016-04-25-ionic1-3.markdown
@@ -2,7 +2,8 @@
 layout: post
 title: "Ionic 1.3.x"
 date: 2016-04-26
-categories:
+categories: Ionic1
+comments: true
 ---
 Hace unos dias se libero una version ligera de Ionic 1.3.x, primero que todo recordemos que Ionic 1.x.x es Angular 1.x.x es por esto
 que nuestras aplicaciones legadas se podran ver beneficiadas por esta nueva actualización llena de errores solucionadas 
