--- a/_posts/2016-06-07-beta8.markdown
+++ b/_posts/2016-06-07-beta8.markdown
@@ -199,4 +199,4 @@ Más adelante explicaremos los distintos conceptos por eso suscribete a nuestro 
 
 Espero sea de utilidad y Sigan Programando :)
 
-[@nicobytes](https://nicobytes.com)
+[@nicobytes](http://www.nicobytes.com)
