updating image to imgur

--- a/_posts/2016-06-05-ionic2.markdown
+++ b/_posts/2016-06-05-ionic2.markdown
@@ -6,7 +6,7 @@ categories: Ionic2
 comments: true
 ---
 
-![Alt text](/images/ionic2.png?raw=true "Carlos Rojas")
+![Alt text](http://i.imgur.com/XGUkDC6.png "Carlos Rojas")
 
 Hola a todos!!!
 
