--- a/_posts/ionic/2015-08-15-ioniclab.markdown
+++ b/_posts/ionic/2015-08-15-ioniclab.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Ionic Lab"
 date: 2015-08-15
-categories: Lab
+categories: ionic
 tags: ionic1 tools
 comments: true
 author: carlosrojas
