--- a/_posts/ionic2/2016-06-05-ionic2.markdown
+++ b/_posts/ionic2/2016-06-05-ionic2.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: "Comenzando con Ionic 2.0"
 date: 2016-06-05
-categories: Ionic2
+categories: ionic2
 tags: ionic2
 comments: true
 author: carlosrojas
