--- a/_posts/ionic2/2016-06-07-beta8.markdown
+++ b/_posts/ionic2/2016-06-07-beta8.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic2 release beta8"
 date: 2016-06-07
 tags: ionicV2 news
-categories: Ionic2
+categories: ionic2
 comments: true
 author: nicobytes
 ---
