--- a/_posts/news/2016-06-17-beta9.markdown
+++ b/_posts/news/2016-06-17-beta9.markdown
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic 2 beta9!!!"
 tags: ionic2 news
 date: 2016-06-17
-categories: ionic2
+categories: news
 comments: true
 author: nicobytes
 ---
