--- a/_posts/ionic2/2016-06-05-ionic2.markdown
+++ b/_posts/ionic2/2016-06-05-ionic2.markdown
@@ -6,6 +6,7 @@ categories: ionic2
 tags: ionic2
 comments: true
 author: carlosrojas
+cover: "http://i.imgur.com/ZYv3zLt.png"
 ---
 
 ![Alt text](http://i.imgur.com/ZYv3zLt.png "Ionic 2")
