--- a/_posts/ionic2/2016-06-15-angular2.markdown
+++ b/_posts/ionic2/2016-06-15-angular2.markdown
@@ -6,6 +6,7 @@ date: 2016-06-15
 categories: ionic2
 comments: true
 author: carlosrojas
+cover: "http://i.imgur.com/ZiY7lT8.jpg"
 ---
 
 <img src="http://i.imgur.com/ZiY7lT8.jpg" class="img-responsive" alt="image angular2"/>
