--- a/_posts/news/2016-06-17-beta9.markdown
+++ b/_posts/news/2016-06-17-beta9.markdown
@@ -6,6 +6,7 @@ date: 2016-06-17
 categories: news
 comments: true
 author: nicobytes
+cover: "http://i.imgur.com/G0XmsHI.jpg"
 ---
 
 > **Ionic 2 beta9** está al aire, además de solucionar varios bug y agregar nuevas características nos muestran que estamos muy cerca de un release, en esta versión *NO HAY BREAKING CHANGES*, así que podemos estar tranquilos y disfrutar de las nuevas características que nos trae.
