--- a/_posts/news/2016-07-26-es6-ionic-2.md
+++ b/_posts/news/2016-07-26-es6-ionic-2.md
@@ -84,7 +84,7 @@ Ahora el uso de promesas es nativo en el lenguaje y evitando tener tantos callba
 **ES6 (Ahora):**
 {% highlight javascript linenos %}
 doSomething(){
-   new Promise((resolve) =>{
+   return new Promise((resolve) =>{
      resolve(true);
    })
 }
@@ -137,7 +137,7 @@ doSomething(function(rtaA){
 ## **let y const** 
 <hr/>
 
-Ahora con **let** podemos tener mejor control del ámbito global de nuestras variables sin tener que hacer funciones que se auto invoquen para proteger el scope y el uso de **cost** podemos definir constantes.
+Ahora con **let** podemos tener mejor control del ámbito global de nuestras variables sin tener que hacer funciones que se auto invoquen para proteger el scope y el uso de **const** podemos definir constantes.
 
 **ES6 (Ahora):**
 {% highlight javascript linenos %}
@@ -206,7 +206,7 @@ Podemos concatenar un string de manera mucho más fácil y tener saltos de líne
 let name = 'Nicolas';
 let twitter = '@nicobytes';
 
-console.log(`Mi nombre es ${name} y mi twitter es ${twiiter}`);
+console.log(`Mi nombre es ${name} y mi twitter es ${twitter}`);
 let template = `<div>
   <h1>${name}</h1>
 </div>`;
