--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -2,14 +2,14 @@
 layout: post
 title: "Peticiones en paralelo con ForkJoin"
 date: 2016-08-09
-tags: ionic2 
+tags: ionic2 angular2
 categories: tips
 comments: true
 author: nicobytes
 cover: "http://i.cubeupload.com/vrWyKl.png"
 ---
 
-> Los [**Observables**](http://www.ion-book.com/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables usando **ForkJoin**.
+> Los [**Observables**](http://www.ion-book.com/ionic2/observables-angular2){:target="_blank"} ahora son pieza clave en Ionic 2 y Angular 2, en artículos pasados vimos como consumir una [**REST API**](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, ahora vamos a ver como hacer peticiones en paralelo usando Observables con **ForkJoin**.
 
 <img class="img-responsive" src="http://i.cubeupload.com/vrWyKl.png" alt="forkJoin">
 
