--- a/_posts/news/2016-07-01-ionic-2-beta-11.md
+++ b/_posts/news/2016-07-01-ionic-2-beta-11.md
@@ -11,7 +11,7 @@ cover: "http://i.imgur.com/eUQv6nt.jpg"
 
 <img class="img-responsive" src="http://i.imgur.com/eUQv6nt.jpg" alt="ionic">
 
-> En este nuevo release de **Ionic 2 Beta 11** el equipo de ionic se ha enfocado en la solución de bugs, en mejoras, en este release hay *BREAKING CHANGES* puedes ver todo el [Changelog](<img class="img-responsive" src="http://i.imgur.com/eUQv6nt.jpg" alt="ionic">) acá.
+> En este nuevo release de **Ionic 2 Beta 11** el equipo de ionic se ha enfocado en la solución de bugs, en mejoras, en este release hay *BREAKING CHANGES* puedes ver todo el [Changelog](https://github.com/driftyco/ionic/blob/master/CHANGELOG.md#200-beta11-2016-08-05) acá.
 
 # Overlays
 
