--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -26,7 +26,7 @@ $# sudo npm install -g ionic@beta cordova
 2. Creamos una app con el Starter Tutorial.
 
 ```
-$# ionic start app tutorial --v2 --ts
+$# ionic start app tutorial --v2
 $# cd app
 ```
 
