add metas facebook

--- a/_posts/ionic2/2016-06-15-angular2.md
+++ b/_posts/ionic2/2016-06-15-angular2.md
@@ -7,6 +7,7 @@ categories: ionic2
 comments: true
 author: carlosrojas
 cover: "http://i.imgur.com/ZiY7lT8.jpg"
+url: "http://www.ion-book.com/ionic2/angular2"
 ---
 
 <img src="http://i.imgur.com/ZiY7lT8.jpg" class="img-responsive" alt="image angular2"/>
