--- a/_posts/news/2016-07-01-ionic-2-beta-10.md
+++ b/_posts/news/2016-07-01-ionic-2-beta-10.md
@@ -7,6 +7,7 @@ tags: news ionic2
 comments: true
 author: nicobytes
 cover: "http://i.imgur.com/eUQv6nt.jpg"
+url: "http://www.ion-book.com/news/ionic-2-beta-10"
 ---
 
 > En este nuevo release de **Ionic 2 Beta 10** el equipo de ionic se ha enfocado en la solución de bugs, en agregar nuevas características, pero sobre en estar preparado para un **release candidate** que estará cerca, en este release si hay *BREAKING CHANGES* ya que hay nuevas características que cambian un poco la estructura de nuestras páginas.
