--- a/_posts/ionic2/2016-07-22-firebase-3.md
+++ b/_posts/ionic2/2016-07-22-firebase-3.md
@@ -7,6 +7,7 @@ categories: ionic2
 comments: true
 author: carlosrojas
 cover: "http://i.imgur.com/5mTwi1e.jpg"
+url: "http://www.ion-book.com/ionic2/firebase-3"
 ---
 
 <img src="http://i.imgur.com/5mTwi1e.jpg" class="img-responsive" />
