--- a/_posts/news/2016-07-26-es6-ionic-2.md
+++ b/_posts/news/2016-07-26-es6-ionic-2.md
@@ -7,6 +7,7 @@ tags: news ionic2
 comments: true
 author: nicobytes
 cover: "http://i.cubeupload.com/kYzZHh.png"
+url: "http://www.ion-book.com/news/es6-ionic-2"
 ---
 
 > El gran impacto que ha tenido javascript ha sido sorprendente y ha crecido de una manera muy significativa, podemos ver ahora **javascript** en cualquier parte, como lenguaje backend con [**node**](https://nodejs.org/en/){:target="_blank"}, podemos controlar robots con [**nodebots**](http://nodebots.io/){:target="_blank"}, en frontend con miles de proyectos y también hacer aplicaciones móviles y ahora tenemos una de las más recientes actualizaciones al lenguaje **ES6** y podemos aprovechar todas estas ventajas en **Ionic 2**.
