--- a/_posts/news/2016-08-12-ionic-2-beta-11.md
+++ b/_posts/news/2016-08-12-ionic-2-beta-11.md
@@ -7,6 +7,7 @@ tags: news ionic2
 comments: true
 author: carlosrojas
 cover: "http://i.imgur.com/eUQv6nt.jpg"
+url: "http://www.ion-book.com/news/ionic-2-beta-11"
 ---
 
 <img class="img-responsive" src="http://i.imgur.com/eUQv6nt.jpg" alt="ionic">
