--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -13,7 +13,7 @@ cover: "http://i.cubeupload.com/WCkFFp.jpg"
 
 <img class="img-responsive" src="http://i.cubeupload.com/WCkFFp.jpg" alt="pouchdb">
 
-Los algoritmos de sincronización pueden llegar a hacer algo complejos, sobre todo cuando tenemos varios usuarios compartiendo recursos y queremos que exista un soporte offline.
+Los algoritmos de sincronización pueden llegar a ser algo complejos, sobre todo cuando tenemos varios usuarios compartiendo recursos y queremos que exista un soporte offline.
 
 Aquí es donde entra un grandiosa librería llamada [**PouchDB**](https://pouchdb.com/){:target="_blank"}, podemos ver su definición:
 
