--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -29,7 +29,7 @@ La mayoría de aplicaciones móviles de conecta a los datos con una [REST API](h
 
 # ¿Por qué aumenta mi UX?
 
-En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y ademas las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminador y editados sin conexión a internet y luego cuando lo tenga conexión lo sincroniza automáticamente podremos brindar una mejor experiencia a los usuarios de la aplicación
+En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y ademas las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminador y editados sin conexión a internet y luego cuando tenga conexión lo sincroniza automáticamente podremos brindar una mejor experiencia a los usuarios de la aplicación
 
 # ¿Cómo funciona?
 
