--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -9,7 +9,7 @@ author: nicobytes
 cover: "http://i.cubeupload.com/WCkFFp.jpg"
 ---
 
-> Dar soporte offline a los datos aumenta el performance y la UX en la aplicación, vivimos en un mundo donde algunas conexiones son lentas o consumir datos a todo momento puede consumir la bateria rapidamente, todo esto hace parte de todo un concepto llamado [**Offline First**](http://offlinefirst.org/){:target="_blank"}.
+> Dar soporte offline a los datos mejora el performance y la UX en la aplicación, vivimos en un mundo donde algunas conexiones son lentas o consumir datos a todo momento puede consumir la bateria rapidamente, todo esto hace parte de todo un concepto llamado [**Offline First**](http://offlinefirst.org/){:target="_blank"}.
 
 <img class="img-responsive" src="http://i.cubeupload.com/WCkFFp.jpg" alt="pouchdb">
 
@@ -23,11 +23,11 @@ Y es una librería perfecta para construir aplicaciones con soporte offline, con
 
 **PouchDB** es increíble!!! (poner estrellita en el repositorio en [github](https://github.com/pouchdb/pouchdb){:target="_blank"}).
 
-# ¿Por qué aumenta el performance?
+# ¿Por qué mejora el performance?
 
 La mayoría de aplicaciones móviles de conecta a los datos con una [REST API](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
 
-# ¿Por qué aumenta mi UX?
+# ¿Por qué mejora mi UX?
 
 En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y ademas las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminador y editados sin conexión a internet y luego cuando tenga conexión lo sincroniza automáticamente podremos brindar una mejor experiencia a los usuarios de la aplicación
 
