--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -9,7 +9,7 @@ author: nicobytes
 cover: "http://i.cubeupload.com/WCkFFp.jpg"
 ---
 
-> Dar soporte offline a los datos mejora el performance y la UX en la aplicación, vivimos en un mundo donde algunas conexiones son lentas o consumir datos a todo momento puede consumir la bateria rapidamente, todo esto hace parte de todo un concepto llamado [**Offline First**](http://offlinefirst.org/){:target="_blank"}.
+> Dar soporte offline a los datos mejora el performance y la UX en la aplicación, vivimos en un mundo donde algunas conexiones son lentas o consumir datos a todo momento puede consumir la bateria rápidamente, todo esto hace parte de todo un concepto llamado [**Offline First**](http://offlinefirst.org/){:target="_blank"}.
 
 <img class="img-responsive" src="http://i.cubeupload.com/WCkFFp.jpg" alt="pouchdb">
 
