--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -15,7 +15,7 @@ cover: "http://i.cubeupload.com/WCkFFp.jpg"
 
 Los algoritmos de sincronización pueden llegar a ser algo complejos, sobre todo cuando tenemos varios usuarios compartiendo recursos y queremos que exista un soporte offline.
 
-Aquí es donde entra un grandiosa librería llamada [**PouchDB**](https://pouchdb.com/){:target="_blank"}, podemos ver su definición:
+Aquí es donde entra una grandiosa librería llamada [**PouchDB**](https://pouchdb.com/){:target="_blank"}, podemos ver su definición:
 
 > *PouchDB was created to help web developers build applications that work as well offline as they do online.* 
 
