--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -25,9 +25,9 @@ Y es una librería perfecta para construir aplicaciones con soporte offline, con
 
 # ¿Por qué mejora el performance?
 
-La mayoría de aplicaciones móviles se conecta a los datos con una [REST API](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
+La mayoría de aplicaciones móviles se conecta a los datos con una [REST API](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien. Pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
 
-# ¿Por qué mejora mi UX?
+# ¿Por qué mejora la UX?
 
 En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y ademas las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminador y editados sin conexión a internet y luego cuando tenga conexión lo sincroniza automáticamente así podremos brindar una mejor experiencia a los usuarios de la aplicación
 
