--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -29,11 +29,11 @@ La mayoría de aplicaciones móviles se conecta a los datos con una [REST API](h
 
 # ¿Por qué mejora la UX?
 
-En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y además las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminados y editados sin conexión a internet y luego cuando tenga conexión lo sincroniza automáticamente así podremos brindar una mejor experiencia a los usuarios de la aplicación
+En nuestro mundo actual aún no hemos cubierto la totalidad de acceso a internet y además las baterias de los dispositivos se gastan rápidamente al tener los datos del dispositivo siempre conectado, así que si tus datos pueden ser consultados, creados, eliminados y editados sin conexión a internet y luego cuando tenga conexión sincronicé los datos automáticamente, así podremos brindar una mejor experiencia a los usuarios de la aplicación
 
 # ¿Cómo funciona?
 
-Automáticamente cuando a PouchDB le damos las credenciales de acceso el genera un canal con la base de datos en la nube y otro con los datos locales para poder hacer la sincronización y usa técnicas como [IndexDB](https://developer.mozilla.org/es/docs/IndexedDB-840092-dup){:target="_blank"} y [WebSql](http://www.html5rocks.com/es/features/storage){:target="_blank"} para guardar los datos en local y luego si hay algún cambio los sincroniza desde la base de datos local a la remota o viceversa.
+Automáticamente cuando a PouchDB le damos las credenciales de acceso PouchDB genera un canal con la base de datos en la nube y otro con los datos locales para poder hacer la sincronización y usa técnicas como [IndexDB](https://developer.mozilla.org/es/docs/IndexedDB-840092-dup){:target="_blank"} y [WebSql](http://www.html5rocks.com/es/features/storage){:target="_blank"} para guardar los datos en local y luego si hay algún cambio los sincroniza desde la base de datos local a la remota o viceversa.
 
 # Para tomar en cuenta:
 
