--- a/_posts/news/2016-11-06-ionic-2-rc-2.md
+++ b/_posts/news/2016-11-06-ionic-2-rc-2.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Ionic 2 RC 2 & Demos actulizados"
+title: "Ionic 2 RC 2 & Demos actualizados"
 date: 2016-11-06
 categories: news
 tags: news ionic2
