Work in issue #7, close #7

--- a/_posts/ionic/2015-08-15-ioniclab.md
+++ b/_posts/ionic/2015-08-15-ioniclab.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic Lab"
 date: 2015-08-15
 categories: ionic
-tags: ionic1 tools
+tags: [ionic1, tools, tips]
 comments: true
 author: carlosrojas
 cover: "http://img.youtube.com/vi/1OLlTxcryXY/hqdefault.jpg"
