--- a/_posts/ionic2/2016-07-22-firebase-3.md
+++ b/_posts/ionic2/2016-07-22-firebase-3.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Firebase 3 + Ionic"
-tags: firebase3
+tags: [firebase, ionic2]
 date: 2016-07-22
 categories: ionic2
 comments: true
