--- a/_posts/news/2016-06-17-beta9.md
+++ b/_posts/news/2016-06-17-beta9.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Ionic 2 beta9!!!"
-tags: ionic2 news
+tags: [release, ionic2]
 date: 2016-06-17
 categories: news
 comments: true
