--- a/_posts/news/2016-07-26-es6-ionic-2.md
+++ b/_posts/news/2016-07-26-es6-ionic-2.md
@@ -3,7 +3,7 @@ layout: post
 title: "ES6 & Ionic 2"
 date: 2016-07-26
 categories: news
-tags: news ionic2
+tags: [tips, ionic2]
 comments: true
 author: nicobytes
 cover: "http://i.cubeupload.com/kYzZHh.png"
