--- a/_posts/tips/2016-08-09-fork-join.md
+++ b/_posts/tips/2016-08-09-fork-join.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Peticiones en paralelo con ForkJoin"
 date: 2016-08-09
-tags: ionic2 angular2
+tags: [angular2, tips]
 categories: tips
 comments: true
 author: nicobytes
