--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Tus datos offline con PouchDB"
 date: 2016-09-07
-tags: ionic2 pouchdb
+tags: [libs, tips]
 categories: tips
 comments: true
 author: nicobytes
