--- a/_posts/ionic/2015-08-01-ionic100.md
+++ b/_posts/ionic/2015-08-01-ionic100.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic 100"
 date: 2015-08-01
 categories: ionic
-tags: ionic1
+tags: [tips, ionic1]
 comments: true
 author: carlosrojas
 cover: "http://img.youtube.com/vi/fMr8wQ3-mbQ/hqdefault.jpg"
