--- a/_posts/ionic/2016-04-25-ionic1-3.md
+++ b/_posts/ionic/2016-04-25-ionic1-3.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic 1.3.x"
 date: 2016-04-26
 categories: ionic
-tags: ionic1
+tags: [release, ionic1]
 comments: true
 author: carlosrojas
 cover: "http://img.youtube.com/vi/O17OWyx08Cg/0.jpg"
