--- a/_posts/ionic/2016-10-25-ion-list.md
+++ b/_posts/ionic/2016-10-25-ion-list.md
@@ -3,7 +3,7 @@ layout: post
 title: "Construye un app de Tareas"
 date: 2016-10-23
 categories: ionic
-tags: ionic1 starter
+tags: [publications, ionic1]
 comments: true
 author: nicobytes
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"
