--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -3,7 +3,7 @@ layout: post
 title: "Comenzando con Ionic 2.0"
 date: 2016-06-05
 categories: ionic2
-tags: ionic2
+tags: [tips, ionic2]
 comments: true
 author: carlosrojas
 cover: "http://i.imgur.com/ZYv3zLt.png"
