--- a/_posts/ionic2/2016-06-15-angular2.md
+++ b/_posts/ionic2/2016-06-15-angular2.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Comenzando con Angular 2"
-tags: angular2
+tags: [tips, angular2, ionic2]
 date: 2016-06-15
 categories: ionic2
 comments: true
