--- a/_posts/news/2016-07-01-ionic-2-beta-10.md
+++ b/_posts/news/2016-07-01-ionic-2-beta-10.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic 2 Beta 10"
 date: 2016-07-01
 categories: news
-tags: news ionic2
+tags: [release, ionic2]
 comments: true
 author: nicobytes
 cover: "http://i.imgur.com/eUQv6nt.jpg"
