--- a/_posts/news/2016-08-12-ionic-2-beta-11.md
+++ b/_posts/news/2016-08-12-ionic-2-beta-11.md
@@ -3,7 +3,7 @@ layout: post
 title: "Ionic 2 Beta 11"
 date: 2016-08-12
 categories: news
-tags: news ionic2
+tags: [release, ionic2]
 comments: true
 author: carlosrojas
 cover: "http://i.imgur.com/eUQv6nt.jpg"
