:bug:  fix errors with images and links

--- a/_posts/ionic/2015-08-15-ioniclab.md
+++ b/_posts/ionic/2015-08-15-ioniclab.md
@@ -14,4 +14,10 @@ Hace unas semanas el equipo de Ionic libero una herramienta para OSX llamada Ion
 
 En este video les comparto un poco de que se trata.
 
-[<img src="http://img.youtube.com/vi/1OLlTxcryXY/hqdefault.jpg" />](http://j.mp/1EfPGeW)
+<div class="row">
+  <div class="col col-100 col-md-50 col-lg-50">
+    <a href="http://j.mp/1M5qtpP" target="_blank">
+      <amp-img width="480" height="360" layout="responsive" src="http://img.youtube.com/vi/1OLlTxcryXY/hqdefault.jpg"></amp-img>
+    </a>
+  </div>
+</div>
