--- a/_posts/ionic/2016-10-25-ion-list.md
+++ b/_posts/ionic/2016-10-25-ion-list.md
@@ -9,9 +9,9 @@ author: nicobytes
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"
 ---
 
-> Ion book ahora tiene una nueva sección llamada [**publicaciones**](http://www.ion-book.com/publications/){:target="_blank"}, serán completos e-books con una guía paso a paso para desarrollar aplicaciones desde cero hasta niveles más avanzados. Nuestra segunda publicación es hacer un app de tareas con **Ionic 1.3** 
+> Ion book ahora tiene una nueva sección llamada [**publicaciones**]({{site.urlblog}}/publications/){:target="_blank"}, serán completos e-books con una guía paso a paso para desarrollar aplicaciones desde cero hasta niveles más avanzados. Nuestra segunda publicación es hacer un app de tareas con **Ionic 1.3** 
 
-<img class="img-responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media" alt="publicaciones">
+<amp-img width="1200" height="630" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"></amp-img>
 
 Se trata de una aplicación que administre nuestras tareas, así como aplicaciones que ya conoces como: Wunderlist, Astrid o Todoist. En esta aplicación tendremos tres secciones:
 
@@ -31,8 +31,8 @@ La publicación tiene como objetivo que tu logres:
 
 ## Resultado:
 
-<img class="img-responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fion-list-result.jpg?alt=media" alt="iongram">
+<amp-img width="915" height="1666" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"></amp-img>
 
-Si quieres esta publicación solo ve a [**publicaciones**](http://www.ion-book.com/publications/){:target="_blank"} y descargala.
+Si quieres esta publicación solo ve a [**publicaciones**]({{site.urlblog}}/publications/){:target="_blank"} y descargala.
 
 Pronto lanzaremos más publicaciones sobre Ionic 1 y Ionic 2.
