--- a/_posts/ionic2/2016-06-05-ionic2.md
+++ b/_posts/ionic2/2016-06-05-ionic2.md
@@ -9,7 +9,7 @@ author: carlosrojas
 cover: "http://i.imgur.com/ZYv3zLt.png"
 ---
 
-![Alt text](http://i.imgur.com/ZYv3zLt.png "Ionic 2")
+<amp-img width="200" height="200" src="http://i.imgur.com/ZYv3zLt.png"></amp-img>
 
 Hola a todos!!!
 
