--- a/_posts/news/2016-07-26-es6-ionic-2.md
+++ b/_posts/news/2016-07-26-es6-ionic-2.md
@@ -11,7 +11,7 @@ cover: "http://i.cubeupload.com/kYzZHh.png"
 
 > El gran impacto que ha tenido javascript ha sido sorprendente y ha crecido de una manera muy significativa, podemos ver ahora **javascript** en cualquier parte, como lenguaje backend con [**node**](https://nodejs.org/en/){:target="_blank"}, podemos controlar robots con [**nodebots**](http://nodebots.io/){:target="_blank"}, en frontend con miles de proyectos y también hacer aplicaciones móviles y ahora tenemos una de las más recientes actualizaciones al lenguaje **ES6** y podemos aprovechar todas estas ventajas en **Ionic 2**.
 
-<img class="img-responsive" src="http://i.cubeupload.com/kYzZHh.png" alt="es6">
+<amp-img width="1024" height="450" layout="responsive" src="http://i.cubeupload.com/kYzZHh.png"></amp-img>
 
 # Principales características 
 
