--- a/_posts/news/2016-08-12-ionic-2-beta-11.md
+++ b/_posts/news/2016-08-12-ionic-2-beta-11.md
@@ -9,7 +9,7 @@ author: carlosrojas
 cover: "http://i.imgur.com/eUQv6nt.jpg"
 ---
 
-<img class="img-responsive" src="http://i.imgur.com/eUQv6nt.jpg" alt="ionic">
+<amp-img width="1920" height="950" layout="responsive" src="http://i.imgur.com/eUQv6nt.jpg"></amp-img>
 
 > En este nuevo release de **Ionic 2 Beta 11** el equipo de ionic se ha enfocado en la solución de bugs, en mejoras, en este release hay *BREAKING CHANGES* puedes ver todo el [Changelog](https://github.com/driftyco/ionic/blob/master/CHANGELOG.md#200-beta11-2016-08-05) acá.
 
