--- a/_posts/news/2016-11-06-ionic-2-rc-2.md
+++ b/_posts/news/2016-11-06-ionic-2-rc-2.md
@@ -11,8 +11,7 @@ cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts
 
 > Hace poco tuvimos una nueva actualización y es **Ionic 2 RC 2**, el cual trae bugs solucionados, mejoras en performance y nuevo proceso de construcción y también en **ion-book** hemos actualizado algunos de nuestros demos con esta versión.
 
-<img class="img-responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fionic-2-rc-2%2Fcover.jpg?alt=media" alt="upgrade">
-
+<amp-img width="1200" height="675" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fionic-2-rc-2%2Fcover.jpg?alt=media"></amp-img>
 
 En este nuevo release no hay *BREAKING CHANGES* es decir solo debemos actualizar nuestro `package.json` con estas versiones:
 
@@ -59,86 +58,6 @@ Puedes un poco más de esto en [Ionic Build Process Updates](http://blog.ionic.i
 
 ## Demos actualizados
 
-En **ion-book** hemos creado la sección de [**demos**](http://www.ion-book.com/demos/){:target="_blank"} donde explicamos con código algunas integraciónes con un **repositorio enlazado**, así que ahora hemos actualizado algunos nuestros demos con este último release:
+En **ion-book** hemos creado la sección de [**demos**]({{site.urlblog}}//ionic2/){:target="_blank"} donde explicamos con código algunas integraciónes con un **repositorio enlazado**, así que ahora hemos actualizado algunos nuestros demos con este último release:
 
-<div class="row">
-  <div class="col-xs-12 col-sm-6">
-    <article class="article-home">
-      <div class="cover-crop">
-        <a href="http://www.ion-book.com/demos/ng2-translate" target="_blank">
-          <img src="https://s17.postimg.org/tneheudov/translate.jpg" class="img-responsive" alt="demo"/>
-        </a>
-      </div>
-      <h1>
-        <a href="http://www.ion-book.com/demos/ng2-translate" target="_blank">App con múltiples idiomas en 6 pasos.</a>
-      </h1>
-      <div class="more">
-        <a class="btn btn-primary" href="http://www.ion-book.com/demos/ng2-translate" target="_blank">Leer más...</a>
-      </div>
-    </article>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <article class="article-home">
-      <div class="cover-crop">
-        <a href="http://www.ion-book.com/demos/google-maps-js-and-ionic-2" target="_blank">
-          <img src="http://i.cubeupload.com/gxxOpn.png" class="img-responsive" alt="demo"/>
-        </a>
-      </div>
-      <h1>
-        <a href="http://www.ion-book.com/demos/google-maps-js-and-ionic-2" target="_blank">Google Maps JS + Ionic 2 en 4 pasos</a>
-      </h1>
-      <div class="more">
-        <a class="btn btn-primary" href="http://www.ion-book.com/demos/google-maps-js-and-ionic-2" target="_blank">Leer más...</a>
-      </div>
-    </article>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <article class="article-home">
-      <div class="cover-crop">
-        <a href="http://www.ion-book.com/demos/rest-api-with-ionic-2" target="_blank">
-          <img src="http://i.imgur.com/tDpJiCR.jpg" class="img-responsive" alt="demo"/>
-        </a>
-      </div>
-      <h1>
-        <a href="http://www.ion-book.com/demos/rest-api-with-ionic-2" target="_blank">Conectado una REST API con Ionic 2</a>
-      </h1>
-      <div class="more">
-        <a class="btn btn-primary" href="http://www.ion-book.com/demos/rest-api-with-ionic-2" target="_blank">Leer más...</a>
-      </div>
-    </article>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <article class="article-home">
-      <div class="cover-crop">
-        <a href="http://www.ion-book.com/demos/camera-and-ionic" target="_blank">
-          <img src="http://i.imgur.com/9Uq2Naw.jpg" class="img-responsive" alt="demo"/>
-        </a>
-      </div>
-      <h1>
-        <a href="http://www.ion-book.com/demos/camera-and-ionic" target="_blank">Usando la cámara con Ionic 2</a>
-      </h1>
-      <div class="more">
-        <a class="btn btn-primary" href="http://www.ion-book.com/demos/camera-and-ionic" target="_blank">Leer más...</a>
-      </div>
-    </article>
-  </div>
-  <div class="col-xs-12 col-sm-6">
-    <article class="article-home">
-      <div class="cover-crop">
-        <a href="http://www.ion-book.com/demos/form-builder" target="_blank">
-          <img src="http://i.imgur.com/PWBxv0C.png" class="img-responsive" alt="demo"/>
-        </a>
-      </div>
-      <h1>
-        <a href="http://www.ion-book.com/demos/form-builder" target="_blank">Forms con IonicV2</a>
-      </h1>
-      <div class="more">
-        <a class="btn btn-primary" href="http://www.ion-book.com/demos/form-builder" target="_blank">Leer más...</a>
-      </div>
-    </article>
-  </div>
-</div>
-
-
-
-Las siguientes semanas actualizaremos los demos faltantes como los de Firebase, Google Maps Native e Integración con Facebook.
+{% include general/demos.html %}
