--- a/_posts/ionic2/2016-07-22-firebase-3.md
+++ b/_posts/ionic2/2016-07-22-firebase-3.md
@@ -9,7 +9,7 @@ author: carlosrojas
 cover: "http://i.imgur.com/5mTwi1e.jpg"
 ---
 
-<img src="http://i.imgur.com/5mTwi1e.jpg" class="img-responsive" />
+<amp-img width="800" height="292" layout="responsive" src="http://i.imgur.com/5mTwi1e.jpg"></amp-img>
 
 Hola a todos!!!
 
