--- a/_posts/news/2016-06-17-beta9.md
+++ b/_posts/news/2016-06-17-beta9.md
@@ -109,5 +109,4 @@ Aqui todos el detalle que trae esta versión ([2.0.0-beta.9](https://github.com/
 
 * **virtualScroll:** improve UIWebView virtual scroll ([ff1daa6](https://github.com/driftyco/ionic/commit/ff1daa6))
 
-
-<img class="img-responsive" src="http://i.imgur.com/G0XmsHI.jpg" alt="angular">
+<amp-img width="2084" height="1152" layout="responsive" src="http://i.imgur.com/G0XmsHI.jpg"></amp-img>
