--- a/_posts/tips/2016-09-07-pouchdb.md
+++ b/_posts/tips/2016-09-07-pouchdb.md
@@ -11,7 +11,8 @@ cover: "http://i.cubeupload.com/WCkFFp.jpg"
 
 > Dar soporte offline a los datos mejora el performance y la UX en la aplicación, vivimos en un mundo donde algunas conexiones son lentas o consumir datos a todo momento puede consumir la bateria rápidamente, todo esto hace parte de todo un concepto llamado [**Offline First**](http://offlinefirst.org/){:target="_blank"}.
 
-<img class="img-responsive" src="http://i.cubeupload.com/WCkFFp.jpg" alt="pouchdb">
+<amp-img width="1200" height="630" layout="responsive" src="http://i.cubeupload.com/WCkFFp.jpg"></amp-img>
+<br/>
 
 Los algoritmos de sincronización pueden llegar a ser algo complejos, sobre todo cuando tenemos varios usuarios compartiendo recursos y queremos que exista un soporte offline.
 
@@ -25,7 +26,7 @@ Y es una librería perfecta para construir aplicaciones con soporte offline, con
 
 # ¿Por qué mejora el performance?
 
-La mayoría de aplicaciones móviles se conecta a los datos con una [REST API](http://www.ion-book.com/demos/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien. Pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
+La mayoría de aplicaciones móviles se conecta a los datos con una [REST API]({{site.urlblog}}//ionic2/rest-api-with-ionic-2){:target="_blank"}, esto hace que cada vez que queramos crear, editar, leer y eliminar alguna información necesitamos estar haciendo peticiones constantes a nuestro Backend y eso está bien. Pero si ya tenemos la base de datos en local podremos responder mucho más rápido a los usuarios ya que los datos ya están en el dispositivo y solo si hay algún cambio PouchDB lo sincronizará.
 
 # ¿Por qué mejora la UX?
 
