:bug: fix errors

--- a/_posts/ionic/2016-10-25-ion-list.md
+++ b/_posts/ionic/2016-10-25-ion-list.md
@@ -4,9 +4,9 @@ title: "Construye un app de Tareas"
 date: 2016-10-23
 categories: ionic1
 tags: [publications, ionic1]
-comments: true
 author: nicobytes
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"
+draft: true
 ---
 
 > Ion book ahora tiene una nueva sección llamada [**publicaciones**]({{site.urlblog}}/publications/){:target="_blank"}, serán completos e-books con una guía paso a paso para desarrollar aplicaciones desde cero hasta niveles más avanzados. Nuestra segunda publicación es hacer un app de tareas con **Ionic 1.3** 
