--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -5,11 +5,10 @@ date: 2016-12-29
 tags: [ionic2]
 categories: ionic2
 author: carlosrojas
-cover: "https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/AAEAAQAAAAAAAAd1AAAAJGU4ZDc4OTAzLWQzYzktNGQ2Ny1iODU3LWUxYzQyMjY4YzA5OA.png?alt=media&token=17030062-508e-43b2-9cf3-aef7563883e0"
-draft: true
+cover: "https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"
 ---
 
-<img src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/AAEAAQAAAAAAAAd1AAAAJGU4ZDc4OTAzLWQzYzktNGQ2Ny1iODU3LWUxYzQyMjY4YzA5OA.png?alt=media&token=17030062-508e-43b2-9cf3-aef7563883e0" />
+<img width="100%" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f" />
 
 Hola!!! y bienvenido a esta serie de lecciones que te enseñaran como hacer una app en Ionic 2.
 
