:bug: fix error with meta description

--- a/_posts/ionic2/2016-12-29-clase-1-feed.md
+++ b/_posts/ionic2/2016-12-29-clase-1-feed.md
@@ -2,19 +2,20 @@
 layout: post
 title: "Clase 1 - Creando una app en Ionic 2."
 date: 2016-12-29
-tags: [ionic2]
+tags: [class, ionic2]
 categories: ionic2
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"
 ---
 
-<img width="100%" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f" />
+<amp-img width="1024" height="512" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/startupers-9cbb6.appspot.com/o/Posts%2Fpablo.png?alt=media&token=cf48f6fd-f726-4284-a4da-a5c46d9c261f"></amp-img>
 
 Hola!!! y bienvenido a esta serie de lecciones que te enseñaran como hacer una app en Ionic 2.
 
 Primero que todo quiero hacer una distincion entre Ionic 1 y Ionic 2
 
 Si es tu primera vez explorando Hybrid Apps quizas puedas estar un poco confundido porque las personas estan hablando sobre Ionic 1 y Ionic 2
+<!--summary-->
 
 <h2>Son similares, es lo mismo?</h2>
 
