--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -137,7 +137,7 @@ en Javascript para que lo puedas integrar facilmente.
 
 ##### EC6 (Ahora)
 
-````javascript
+{% highlight js %}
 
 doSomething(){
    return new Promise((resolve) =>{
@@ -149,11 +149,11 @@ doSomething().then(rta => {
   console.log(rta);
 });
 
-````
+{% endhighlight %}
 
 ##### EC5 (Antes)
 
-````javascript
+{% highlight js %}
 
 function doSomething (onDone) {
   onDone();
@@ -163,14 +163,15 @@ doSomething(function(rta){
   console.log(rta);
 })
 
-````
+{% endhighlight %}
+
 ## let y const
 
 Ahora podemos integrar el alcance de las variables sin usa funciones de autoinvocacion.
 
 ##### EC6 (Ahora)
 
-````javascript
+{% highlight js %}
 
 const PI = 3.14;
 if(true) {
@@ -181,18 +182,18 @@ console.log(PI); //3.14
 
 PI = 3.12; //Error. PI is Constant.
 
-````
+{% endhighlight %}
 
 ##### EC5 (Antes)
 
-````javascript
+{% highlight js %}
 
 if(true) {
   var twitter = "@startupersio";
 }
 console.log(twitter); //twitter is global
 
-````
+{% endhighlight %}
 
 Lo importante a entender ahora es que vamos a poder utilizar estas nuevas caracteristicas en Ionic 2.
 
@@ -206,7 +207,7 @@ Por ejemplo:
 
 ##### Tipos
 
-````javascript
+{% highlight js %}
 
 // Only string permitted.
 
@@ -214,11 +215,11 @@ let alert = (msg: string) => {
   alert(msg);
 }
 
-````
+{% endhighlight %}
 
 ##### Interfaces
 
-````javascript
+{% highlight js %}
 
 interface Shoe {
   brand: string,
@@ -226,7 +227,7 @@ interface Shoe {
   isCasual: boolean
 }
 
-````
+{% endhighlight %}
 
 Ok, lo importante a enteder aqui es que vamos a tener mas caracteristicas gracias a TypeScript.
 
@@ -250,19 +251,20 @@ Algunos ejemplos:
 
 ##### Actualizamos la propiedad value con el resultado de la expresion firstName.
 
-````javascript
+{% highlight html %}
 
 <input [value]="firstName">
 
-````
+{% endhighlight %}
 
 #####  Actualizamos el texto contenido en ponyName, por ejemplo, "Hello seabiscuit".
 
-````javascript
+{% highlight html %}
 
 <p> Hello {{ ponyName }} </p>
 
-````
+{% endhighlight %}
+
 Lo importante aqui es que necesitaras recordar que tu vas a usar Angular 2 todo el tiempo con tus nuevas Apps en Ionic 2.
 
 es todo por ahora, mientras tanto puedes leer estos articulos.
