--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -37,7 +37,7 @@ Objetive-C. Pero ahora nosotros vamos a poder usar estas caracteristicas en Java
 
 ##### EC6 (Ahora)
 
-````javascript
+{% highlight js %}
 
 class Person {
   name;
@@ -53,11 +53,11 @@ class Person {
   }
 }
 
-````
+{% endhighlight %}
 
-##### EC5 (Antés)
+##### ES5 (Antés)
 
-````javascript
+{% highlight js %}
 
 var Person = function (name, age) {
     this.name = name;
@@ -68,14 +68,15 @@ Person.prototype.getName = function () {
     return this.name;
 };
 
-````
+{% endhighlight %}
+
 #### Modulos
 
 Ahora nosotros escribimos y podemos importar nuestras librerias sin mucho trabajo.
 
-##### EC6 (Ahora)
+##### ES6 (Ahora)
 
-````javascript
+{% highlight js %}
 
 //  lib/math.js
 export function multiply (x, y) { return x * y }
@@ -84,11 +85,11 @@ export function multiply (x, y) { return x * y }
 import { multiply } from "./lib/math"
 console.log(multiply(2, 2));
 
-````
+{% endhighlight %}
 
 ##### EC5 (Antés)
 
-````javascript
+{% highlight js %}
 
 //  lib/math.js
 LibMath = {};
@@ -98,7 +99,7 @@ LibMath.multiply = function (x, y) { return x * y };
 var math = LibMath;
 console.log(math.multiply(2, 2));
 
-````
+{% endhighlight %}
 
 <i>Disfrutas este articulo? Suscribete a nuestro curso por correo. Aprende a hacer Apps en Ionic 2</i>
 
