--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -136,7 +136,7 @@ console.log(math.multiply(2, 2));
 Las promesas son una excelente forma de hacer peticiones asincronas, en otras palabras preguntar a servidores por datos. Ahora es integrado
 en Javascript para que lo puedas integrar facilmente.
 
-##### EC6 (Ahora)
+##### ES6 (Ahora)
 
 {% highlight js %}
 
@@ -152,7 +152,7 @@ doSomething().then(rta => {
 
 {% endhighlight %}
 
-##### EC5 (Antes)
+##### ES5 (Antes)
 
 {% highlight js %}
 
@@ -170,7 +170,7 @@ doSomething(function(rta){
 
 Ahora podemos integrar el alcance de las variables sin usa funciones de autoinvocacion.
 
-##### EC6 (Ahora)
+##### ES6 (Ahora)
 
 {% highlight js %}
 
@@ -185,7 +185,7 @@ PI = 3.12; //Error. PI is Constant.
 
 {% endhighlight %}
 
-##### EC5 (Antes)
+##### ES5 (Antes)
 
 {% highlight js %}
 
