--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -35,7 +35,7 @@ interesantes cosas.
 javascript ES 5 no tiene el concepto de Clases que es un paradigma usado en desarrollo en otros lenguajes como C#, Java,
 Objetive-C. Pero ahora nosotros vamos a poder usar estas caracteristicas en Javascript facilmente.
 
-##### EC6 (Ahora)
+##### ES6 (Ahora)
 
 {% highlight js %}
 
@@ -170,7 +170,7 @@ doSomething(function(rta){
 
 Ahora podemos integrar el alcance de las variables sin usa funciones de autoinvocacion.
 
-##### EC6 (Ahora)
+##### ES6 (Ahora)
 
 {% highlight js %}
 
@@ -185,7 +185,7 @@ PI = 3.12; //Error. PI is Constant.
 
 {% endhighlight %}
 
-##### EC5 (Antes)
+##### ES5 (Antes)
 
 {% highlight js %}
 
@@ -261,9 +261,9 @@ Algunos ejemplos:
 #####  Actualizamos el texto contenido en ponyName, por ejemplo, "Hello seabiscuit".
 
 {% highlight html %}
-
+{% raw %}
 <p> Hello {{ ponyName }} </p>
-
+{% endraw %}
 {% endhighlight %}
 
 Lo importante aqui es que necesitaras recordar que tu vas a usar Angular 2 todo el tiempo con tus nuevas Apps en Ionic 2.
