article about Ionic 2 VS Nativescript

--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -103,7 +103,7 @@ console.log(math.multiply(2, 2));
 
 <i>Disfrutas este articulo? Suscribete a nuestro curso por correo. Aprende a hacer Apps en Ionic 2</i>
 
-<div id="mlb2-3764889" class="ml-subscribe-form ml-subscribe-form-3764889" style="background-color:black">
+<div id="mlb2-3764889" class="ml-subscribe-form ml-subscribe-form-3764889" style="background-color:#2557AA">
     <div class="ml-vertical-align-center">
       <div class="subscribe-form ml-block-success" style="display:none">
           <div class="form-section mb0">
