--- a/_posts/ionic2/2017-01-05-clase-2-feed.md
+++ b/_posts/ionic2/2017-01-05-clase-2-feed.md
@@ -101,35 +101,7 @@ console.log(math.multiply(2, 2));
 
 {% endhighlight %}
 
-<i>Disfrutas este articulo? Suscribete a nuestro curso por correo. Aprende a hacer Apps en Ionic 2</i>
-
-<div id="mlb2-3764889" class="ml-subscribe-form ml-subscribe-form-3764889" style="background-color:#2557AA">
-    <div class="ml-vertical-align-center">
-      <div class="subscribe-form ml-block-success" style="display:none">
-          <div class="form-section mb0">
-              <p>{{ site.subscribe.success_text }}</p>
-          </div>
-      </div>
-      <form class="ml-block-form" action="//app.mailerlite.com/webforms/submit/s3l4z5" data-id="246353" data-code="s3l4z5" method="POST" target="_blank">
-          <div class="subscribe-form">
-              <div class="form-section form-section-mail">
-                  <div class="form-group ml-field-email ml-validate-required ml-validate-email">
-                      <input type="text" name="fields[email]" class="form-control" placeholder="Email*" value="">
-                  </div>
-              </div>
-              <div class="form-section">
-                <input type="hidden" name="ml-submit" value="1" />
-                <button type="submit" class="btn btn-primary btn-round btn-register primary">
-                    {{ site.subscribe.btn_text }}
-                </button>
-                <button disabled="disabled" class="btn btn-primary btn-round btn-register loading" style="display: none;" type="button" >
-                    <img src="//static.mailerlite.com/images/rolling.gif" width="20" height="20" style="width: 20px; height: 20px;">
-                </button>
-              </div>
-          </div>
-      </form>
-  </div>
-</div>
+{% include blog/subscribe.html %}
 
 ## Promesas
 
