--- a/_posts/ionic1/2016-10-25-ion-list.md
+++ b/_posts/ionic1/2016-10-25-ion-list.md
@@ -6,10 +6,9 @@ categories: ionic1
 tags: [publications, ionic1]
 author: nicobytes
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"
-draft: true
 ---
 
-> Ion book ahora tiene una nueva sección llamada [**publicaciones**]({{site.urlblog}}/publications/){:target="_blank"}, serán completos e-books con una guía paso a paso para desarrollar aplicaciones desde cero hasta niveles más avanzados. Nuestra segunda publicación es hacer un app de tareas con **Ionic 1.3** 
+> Ion book ahora tiene una nueva sección llamada [**publicaciones**]({{site.url}}/publications/){:target="_blank"}, serán completos e-books con una guía paso a paso para desarrollar aplicaciones desde cero hasta niveles más avanzados. Nuestra segunda publicación es hacer un app de tareas con **Ionic 1.3** 
 
 <amp-img width="1200" height="630" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"></amp-img>
 
@@ -29,10 +28,6 @@ La publicación tiene como objetivo que tu logres:
 - Manejar Formularios.
 - Hacer uso de Modales.
 
-## Resultado:
-
-<amp-img width="915" height="1666" layout="responsive" src="https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fion-list%2Fcover.jpg?alt=media"></amp-img>
-
-Si quieres esta publicación solo ve a [**publicaciones**]({{site.urlblog}}/publications/){:target="_blank"} y descargala.
+Si quieres esta publicación solo ve a [**publicaciones**]({{site.url}}/publications/){:target="_blank"} y descargala.
 
 Pronto lanzaremos más publicaciones sobre Ionic 1 y Ionic 2.
