--- a/_posts/news/2017-01-20-IonicDB.md
+++ b/_posts/news/2017-01-20-IonicDB.md
@@ -1,9 +1,10 @@
 ---
 layout: post
 title: "Ionic DB se encuentra entre nosotros."
+keywords: "que es ionic db, ionicdb, ionic database"
 date: 2017-01-20
-tags: [class, ionic2]
-categories: ionic2
+tags: [ionic2, release]
+categories: news
 author: carlosrojas
 cover: "https://firebasestorage.googleapis.com/v0/b/ion-book.appspot.com/o/posts%2Fionicdb%2Fionicdb.png?alt=media&token=46de90c8-2beb-423e-a212-a94d2247c77c"
 ---
