:bug: fix errors

--- a/_posts/news/2017-01-20-IonicDB.md
+++ b/_posts/news/2017-01-20-IonicDB.md
@@ -21,7 +21,7 @@ trata por que es un sistema de almacenamiento parecido a las soluciones que ofre
 2. Solicitud de la información con la habilidad observala en tiempo real.
 3. Sistema de Autenticacion y Permisos para escribir en la información almacenada.
 
-## Como utilizarla ?
+## ¿Como utilizarla?
 
 Primero que todo debes tener instalado el cliente de Ionic Cloud en tu App.
 
