--- a/_posts/news/2017-01-20-IonicDB.md
+++ b/_posts/news/2017-01-20-IonicDB.md
@@ -55,6 +55,8 @@ export class MyPage {
 
 Puedes observar los diferentes metodos [aquí](https://docs.ionic.io/services/database/#api-documentation){:target="_blank"}.
 
+{% include blog/subscribe.html %}
+
 # Como verlo en el Panel de control ?
 
 Debes ingresar a tu cuenta de [ionic.io](https://apps.ionic.io/apps){:target="_blank"}
