new post + subscribe inside posts.

--- a/_posts/news/2017-03-08-ionic-2-2-0-out.md
+++ b/_posts/news/2017-03-08-ionic-2-2-0-out.md
@@ -21,6 +21,8 @@ Esta nueva versión incluye algunos arreglos de bugs, también como dos caracter
 
 Una de las caracteristicas mas solicitadas cuando se comenzo con Ionic 2.x fue el Split Pane, o agregar la habilidad de crear dos vistas en pantallas grandes. El Split Pane en Ionic 2 se penso para que fuese "Automatico", pero que no limitara desarrolladores a Menus (Como en su version en Ionic 1).
 
+{% include blog/subscribe.html %}
+
 Ahora si quieres agregar un Split Pane a tu App, es tan simple como envolver tu componente root:
 
 {% highlight js %}
